spacing var added + .map cdt prevent errors

--- a/src/components/CountriesTable/CountriesTable.module.css
+++ b/src/components/CountriesTable/CountriesTable.module.css
@@ -1,6 +1,6 @@
 .heading {
   display: flex;
-  padding: 20px;
+  padding: var(--spacing-md);
 }
 
 .heading button {
@@ -32,19 +32,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 2px;
+  margin-left: var(--spacing-icon);
 }
 
 .row {
   display: flex;
-  padding: 20px;
+  padding: var(--spacing-md) var(--spacing-lg);
 
   align-items: center;
   text-align: center;
 
   background-color: var(--background-color-light);
   border-radius: 8px;
-  margin-bottom: 16px;
+  margin-bottom: var(--spacing-sm);
 
   box-shadow: var(--box-shadow);
 
@@ -71,7 +71,7 @@
 
 .flag,
 .heading_flag {
-  margin-right: 16px;
+  margin-right: var(--spacing-lg);
   flex: 1;
   display: flex;
   align-items: center;
