--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 24px;
+  padding: var(--spacing-xl);
   height: 100vh;
 
   display: grid;
@@ -13,25 +13,38 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 32px;
+  margin-bottom: var(--spacing-xl);
 }
 
 .footer {
-  margin-top: 32px;
+  margin-top: var(--spacing-xl);
+  padding-bottom: var(--spacing-md);
   text-align: center;
   font-size: 0.75rem;
 }
 
-.theme_switcher {
+.theme_switcher_light,
+.theme_switcher_dark {
   border: none;
   background-color: transparent;
   padding: 0;
-  color: var(--text-color-secondary);
-  margin-left: 4px;
+  margin-left: var(--spacing-icon);
 
   display: flex;
   justify-content: center;
   align-items: center;
 
   cursor: pointer;
+
+  position: absolute;
+  top: var(--spacing-xl);
+  right: var(--spacing-xl);
+}
+
+.theme_switcher_light {
+  color: #ffe100;
+}
+
+.theme_switcher_dark {
+  color: #1f3aa7;
 }
