--- a/src/components/SearchInput/SearchInput.module.css
+++ b/src/components/SearchInput/SearchInput.module.css
@@ -4,7 +4,7 @@
 
   background-color: var(--background-color-dark);
   border-radius: 8px;
-  padding-left: 16px;
+  padding-left: var(--spacing-lg);
 
   color: var(--text-color-secondary);
 }
@@ -12,7 +12,7 @@
 .input {
   border: none;
   background-color: transparent;
-  padding: 16px;
+  padding: var(--spacing-md);
   width: 100%;
   height: 100%;
   outline: none;
