--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,6 +12,12 @@
 
   --font-family: "Poppins", sans-serif;
   --box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.05);
+
+  --spacing-sm: 8px;
+  --spacing-md: 12px;
+  --spacing-lg: 16px;
+  --spacing-xl: 24px;
+  --spacing-icon: 4px;
 }
 
 [data-theme="dark"] {
